<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/steps_list"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"

    tools:context="com.example.android.udacity_nanoand_bakeit.RecipeStepsActivity"
    tools:listitem="@layout/recipesteps_detail"
    >

</android.support.v7.widget.RecyclerView>