<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_list"
    android:name="com.example.android.bakeit.RecipeListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"

    tools:context="com.example.android.udacity_nanoand_bakeit.MainActivity"
    tools:listitem="@layout/recipe_list_content" />
